# mfp3000bot

./: .gitignore  Cargo.toml  RPiZero.Dockerfile  Readme.md  Todo.md
.cargo/: config.toml
config/: config.toml  mfp3000bot.service
config/3rd/: unoserver.service
libcups/: Cargo.toml
libcups-sys/: Cargo.toml  build.rs
libcups-sys/ffi/: wrapper.h
libcups-sys/src/: bindings.rs  lib.rs  patches.rs
libcups/src/: document.rs  lib.rs  options.rs  printer.rs  result.rs  utils.rs
libjpeg/: Cargo.toml
libjpeg-sys/: Cargo.toml  build.rs
libjpeg-sys/ffi/: wrapper.h
libjpeg-sys/src/: lib.rs
libjpeg/src/: lib.rs
libsane/: Cargo.toml
libsane-sys/: Cargo.toml  build.rs
libsane-sys/src/: lib.rs
libsane/src/: backend.rs  device.rs  lib.rs  options.rs  parameters.rs  result.rs  scanner.rs  utils.rs
mfp3000bot/: Cargo.toml  build.rs
mfp3000bot/src/: bot.rs  bot_data.rs  bot_messages.rs  bot_utils.rs  config.rs  main.rs  pdf_builder.rs  print.rs  scan.rs
simple-cups/: Cargo.toml  build.rs
simple-cups/ffi/: wrapper.h
simple-cups/src/: ffi.rs  job.rs  lib.rs  options.rs  printer.rs  utils.rs
simple-sane/: Cargo.toml  build.rs
simple-sane/ffi/: wrapper.h
simple-sane/src/: backend.rs  device.rs  ffi.rs  lib.rs  options.rs  parameters.rs  result.rs  scanner.rs  utils.rs
src/: cups.rs  main.rs  print.rs
src/cups/: mod.rs  options.rs  printer.rs
