[package]
name = "mfp3000bot"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr = "0.2.11"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking"] }
simple-cups = { version = "1.0.0", path = "../simple-cups" }
simple-sane = { version = "1.0.0", path = "../simple-sane" }
simple_logger = "4.3.3"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
